@@ -38,6 +38,7 @@
     * Stop Wizard on printer errors.
     * Support the new STOPPED state
     * Use X-Api-Key or HTTP Digest for /api endpoints
+    * hostname in /api/version
 
 0.2.0 (2020-12-14)
 
